<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard2Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_header"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/display_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <!-- Circular Image View in Android https://www.youtube.com/watch?v=nRPoW0X16QU-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nameTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintTop_toBottomOf="@id/dashboardHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/safetyLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sailingLayout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/safetyImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/safety"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/safety"
                    android:textSize="20sp"
                    android:textColor="@color/primary_dark_color"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sailingLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toEndOf="@+id/safetyLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/sailingb"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sailing"
                    android:textSize="20sp"
                    android:textColor="@color/primary_dark_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/groupLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sailingLayout"
                app:layout_constraintTop_toBottomOf="@+id/safetyLayout">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/group"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/group"
                    android:textSize="20sp"
                    android:textColor="@color/primary_dark_color"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sessionLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toEndOf="@+id/safetyLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sailingLayout">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/session"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/session"
                    android:textSize="20sp"
                    android:textColor="@color/primary_dark_color"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/weather"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@+id/sessionLayout"
                app:layout_constraintStart_toStartOf="@+id/safetyLayout"
                app:layout_constraintTop_toBottomOf="@+id/groupLayout">

                <TextView
                    android:id="@+id/WeatherTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_rectangle"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/weather"
                    android:textColor="@color/primary_dark_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/sun"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/WeatherTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/WeatherTextView"
                    app:tint="@color/rectangle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/lorum_ipsum_sporum"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/WeatherTextView"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rectangle"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/main_menu"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        />

</androidx.constraintlayout.widget.ConstraintLayout>